[project]
name = "grabeklis"
version = "0.1.0"
description = "Latvian news site scraper"
authors = [
  { name = "Davis Pazars", email = "davis.pazars@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
  "scrapy",
]

[project.urls]
"Homepage" = "https://github.com/pazars/grabeklis"
"Bug Tracker" = "https://github.com/pazars/grabeklis/issues"